<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.4">

        <androidx.cardview.widget.CardView
            android:id="@+id/temp_cardView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:elevation="10dp"
            android:padding="6dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/temperature"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/temp_cardView"
            app:layout_constraintTop_toBottomOf="@id/temp_cardView">

            <RadioGroup
                android:id="@+id/temp_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/celsius_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_written" />

                <RadioButton
                    android:id="@+id/kelvin_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin_written" />

                <RadioButton
                    android:id="@+id/fahrenheit_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit_written" />
            </RadioGroup>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/constraint1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.4">

        <androidx.cardview.widget.CardView
            android:id="@+id/wind_cardView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:elevation="10dp"
            android:padding="6dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wind_speed"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/wind_cardView"
            app:layout_constraintTop_toBottomOf="@id/wind_cardView">

            <RadioGroup
                android:id="@+id/wind_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/meter_per_second_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mpers" />

                <RadioButton
                    android:id="@+id/mile_per_hour_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mph" />

            </RadioGroup>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/constraint1"
        app:layout_constraintTop_toBottomOf="@id/constraint1"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.4">

        <androidx.cardview.widget.CardView
            android:id="@+id/notification_cardView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:elevation="10dp"
            android:padding="6dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/notification"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/notification_cardView"
            app:layout_constraintTop_toBottomOf="@id/notification_cardView">

            <RadioGroup
                android:id="@+id/notification_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/enable_notification_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable" />

                <RadioButton
                    android:id="@+id/disable_notification_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disable" />

            </RadioGroup>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/constraint2"
        app:layout_constraintTop_toTopOf="@id/constraint3"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.4">

        <androidx.cardview.widget.CardView
            android:id="@+id/language_cardView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:elevation="10dp"
            android:padding="6dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/language"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/language_cardView"
            app:layout_constraintTop_toBottomOf="@id/language_cardView">

            <RadioGroup
                android:id="@+id/language_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/english_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/arabic_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic" />

            </RadioGroup>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done_setting_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/done_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>